added variant for width of window "320px"

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="Style.css">
     <link href="https://fonts.googleapis.com/css2?family=Jim+Nightshade&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/google/fonts/ofl/jomolhari/Jomolhari-Regular.ttf" rel="stylesheet">
 
 </head>
 <body>
@@ -28,8 +29,9 @@
             <h1>Вибір покупців:</h1>
             <p>Насичений колір та чиста прозорість смарагдового набору користуються популярністю у великої кількості гравців</p>
         </div>
-        <img src="images/fovorite choise decoration.png" alt="fovorite choise decoration">
-        <img src="images/B2 IMG.png" alt="customer choise">
+        <img src="images/fovorite choise decoration.png" alt="fovorite choise decoration" class="original_size_1">
+        <img src="images/B2 IMG.png" alt="customer choise" class="original_size_1">
+        <img src="images/b2 decoration phone size.png" alt="fovorite choise decoration phone size" class="phone_size_1">
     </div>
     <div class="Block_3_section_choice">
         <div class="IMG_button">
@@ -49,10 +51,10 @@
         <div>
             <h1>Про нас</h1>
             <p>Тут ви знайдете все необхідне для повного занурення у фентезійний світ ДНД. </p>
-            <br>
-            <p>Тут ви знайдете і всеможливі гральні кістки, як звичайні так і з особливим дизайном, і всеможливі фігурки, як розфарбовані так і з фарбами у комлекті і навіть літературу для збагачення власної компанії.</p>
+            <p class="original_size_2">Тут ви знайдете і всеможливі гральні кістки, як звичайні так і з особливим дизайном, і всеможливі фігурки, як розфарбовані так і з фарбами у комлекті і навіть літературу для збагачення власної компанії.</p>
         </div>
         <img src="images/IMG.png" alt="about us image" width="675px" height="450px">
+        <p class="phone_size_2">Тут ви знайдете і всеможливі гральні кістки, як звичайні так і з особливим дизайном, і всеможливі фігурки, як розфарбовані так і з фарбами у комлекті і навіть літературу для збагачення власної компанії.</p>
     </div>
     <div class="Block_5_work_for_you">
         <h1 class="Block_5_work_for_you_H1">Працюємо для вас</h1>
@@ -136,7 +138,7 @@
     </div>
     <div class="page_end">
         <div class="page_end_first_half">
-            <img src="images/logo IMG.png" alt="logo" width="167" height="167">
+            <img src="images/logo IMG.png" alt="logo" width="167" height="167" class="end_logo">
             <p class="name3">DND shop</p>
             <p class="copiright">Copiright Ⓒ 2022</p>
         </div>
@@ -168,7 +170,8 @@
             <p class="Jim_Nightshade">Jim Nightshade</p>
             <p class="Jomolhari">Jomolhari</p>
         </div>
-        <img src="images/colors.png" alt="colors">
+        <img src="images/colors.png" alt="colors" class="original_size_3">
+        <img src="images/colors phone size.png" alt="colors" class="phone_size_3">
     </div>
     <p class="sent_button2">Відправити</p>
     
